# VALUE

iCub-controller/: CMakeLists.txt  main.cpp
iCub-controller/data/: IT_SOM.xml  PFC_SOM.xml  graspBigBallOutputs.data  graspBigBoxOutputs.data  graspSmallBallOutputs.data  graspSmallBoxOutputs.data  jordanNet-16out-4o-4s-a.xml  jordanNet-16out-4o-4s-learn0.055.xml  jordanNet-16outputs-1o-1s.xml  jordanNet-16outputs-1o-4s.xml  jordanNet-16outputs-4o-4s.xml  jordanNet-8outputs.xml  jordanSOMNet-new.xml  jordanSOMNet.xml  jordanSOMNet1.xml  jordanSOMNet4.xml
iCub-controller/data/10000/: jordanSOMNet10.xml  jordanSOMNet2.xml  jordanSOMNet3.xml  jordanSOMNet4.xml  jordanSOMNet6.xml  jordanSOMNet7.xml  jordanSOMNet8.xml  jordanSOMNet9.xml
iCub-controller/data/20000/: jordanSOMNet1.xml  jordanSOMNet2.xml
iCub-controller/data/30000/: jordanSOMNet.xml
iCub-controller/data/6000/1/: jordanSOMNet1.xml  jordanSOMNet3.xml
iCub-controller/data/6000/2/: jordanSOMNet1.xml
iCub-controller/data/8000/: jordanSOMNet.xml
iCub-controller/data/renormalised/12000/: jordanSOMNet1.xml  jordanSOMNet2.xml  jordanSOMNet3.xml
iCub-controller/data/renormalised/6000/: jordanSOMNet1.xml  jordanSOMNet3.xml
neural-net/SOMs/IT/: SOMTest.cpp
neural-net/SOMs/IT/results/: SAveNEt0_0.txt  SAveNEt1_1.txt  SAveNEt2_2.txt  SAveNEt3_3.txt
neural-net/SOMs/MT/: CMakeLists.txt  SOMTest.cpp
neural-net/SOMs/MT/results/: SAveNEt0_0.txt  SAveNEt1_1.txt
neural-net/SOMs/PFC/: SOMTest.cpp
neural-net/jordan/: CMakeLists.txt  jordanTest.cpp  net.xml
neural-net/jordan/data/: MT_SOM.xml  graspBigBall.data  graspBigBox.data  graspSmallBall.data  graspSmallBox.data  graspingData.gnumeric
neural-net/jordan/net/: jordanSOMNet-4000.xml  jordanSOMNet2.xml  jordanSOMNet3.xml
neural-net/jordan/results/: errorTest.data  errorTraining.data  jordanNet-full.xml  jordanNet1.xml  jordanNet2.xml
(+212 files in other folders)
